Closes-Bug: #1647533 - Config Pages misalignment
1) The height of multiselection input was bigger in few places where it had the
lengthier placeholder text.
2) Someplaces the place holder text was not aligned to the left.
3) In the Physical router - OVSDB Managed ToR tab TOR Agent name and TSN Name
was misaligned

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -1590,9 +1590,11 @@ div.stack-bar-chart-tooltip > .popover.popover-tooltip {
 /*Fix for the select2 placeholder text truncating issue */
 .select2-container-multi .select2-choices .select2-search-field {
     width: 100%;
+    text-align:left;
     }
- .select2-container-multi .select2-choices .select2-search-choice+ .select2-search-field{
+.select2-container-multi .select2-choices .select2-search-choice+ .select2-search-field{
     width: auto;/*overwrites previous class when one/more item(s) are added*/}
-.select2-search-field input{
+#ecmp_hashing_include_fields .select2-search-field input{
     width:100%!important }
-
+.no-label-input{
+    padding-top:22px;}
